--- a/index.html
+++ b/index.html
@@ -185,12 +185,14 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        I'm a dedicated full-stack developer passionate about creating efficient, scalable web applications. 
+                        I'm a dedicated full-stack developer passionate about creating efficient, scalable web
+                        applications.
                         Currently pursuing my degree while building real-world projects that solve practical problems.
                     </p>
                     <p>
-                        I specialize in modern JavaScript frameworks, particularly React and Node.js, and enjoy 
-                        the entire development process from concept to deployment. Always eager to learn new technologies 
+                        I specialize in modern JavaScript frameworks, particularly React and Node.js, and enjoy
+                        the entire development process from concept to deployment. Always eager to learn new
+                        technologies
                         and contribute to meaningful projects.
                     </p>
                     <div class="about-stats">
@@ -421,7 +423,8 @@
                     </div>
                     <div class="project-content">
                         <h3>Portfolio Website</h3>
-                        <p>A modern, responsive portfolio website built with vanilla JavaScript, featuring terminal animations, 
+                        <p>A modern, responsive portfolio website built with vanilla JavaScript, featuring terminal
+                            animations,
                             GitHub-style design, and smooth interactions. Deployed on Vercel.</p>
                         <div class="project-tech">
                             <span>HTML5</span>
@@ -447,7 +450,8 @@
                     </div>
                     <div class="project-content">
                         <h3>Weather Dashboard</h3>
-                        <p>A clean weather application that fetches real-time weather data using APIs. Features location-based 
+                        <p>A clean weather application that fetches real-time weather data using APIs. Features
+                            location-based
                             weather, 5-day forecast, and responsive design for all devices.</p>
                         <div class="project-tech">
                             <span>JavaScript</span>
@@ -473,7 +477,8 @@
                     </div>
                     <div class="project-content">
                         <h3>Todo List Application</h3>
-                        <p>A feature-rich todo application with local storage, task categories, due dates, and priority levels. 
+                        <p>A feature-rich todo application with local storage, task categories, due dates, and priority
+                            levels.
                             Built with vanilla JavaScript focusing on clean code and user experience.</p>
                         <div class="project-tech">
                             <span>JavaScript</span>
@@ -482,8 +487,7 @@
                             <span>HTML5</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/SamarthBundele/todo-app" target="_blank"
-                                class="project-link">
+                            <a href="https://github.com/SamarthBundele/todo-app" target="_blank" class="project-link">
                                 <i class="fab fa-github"></i> Code
                             </a>
                             <a href="#" target="_blank" class="project-link">
