--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="terminal-output">
                             <div class="output-line">Initializing developer profile...</div>
-                            <div class="output-line success">✓ Loading skills: [HTML, CSS, JavaScript, React]</div>
+                            <div class="output-line success">✓ Loading skills: [Python, JavaScript, React, ML]</div>
                             <div class="output-line success">✓ Connecting to GitHub repositories...</div>
                             <div class="output-line success">✓ Portfolio ready for deployment</div>
                         </div>
@@ -77,7 +77,7 @@
                     <pre><code class="language-javascript">
 <span class="keyword">const</span> <span class="variable">developer</span> = {
   <span class="property">name</span>: <span class="string">"Samarth Bundele"</span>,
-  <span class="property">skills</span>: [<span class="string">"HTML"</span>, <span class="string">"CSS"</span>, <span class="string">"JavaScript"</span>, <span class="string">"React"</span>],
+  <span class="property">skills</span>: [<span class="string">"Python"</span>, <span class="string">"JavaScript"</span>, <span class="string">"React"</span>, <span class="string">"ML"</span>],
   <span class="property">passion</span>: <span class="string">"Creating responsive web applications"</span>,
   <span class="property">available</span>: <span class="boolean">true</span>
 };
@@ -185,15 +185,13 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        I'm a dedicated full-stack developer passionate about creating efficient, scalable web
-                        applications.
-                        Currently pursuing my degree while building real-world projects that solve practical problems.
+                        I'm a dedicated full-stack developer with a passion for AI and machine learning. Currently pursuing my degree 
+                        while building real-world projects that combine web development with intelligent data solutions.
                     </p>
                     <p>
-                        I specialize in modern JavaScript frameworks, particularly React and Node.js, and enjoy
-                        the entire development process from concept to deployment. Always eager to learn new
-                        technologies
-                        and contribute to meaningful projects.
+                        I specialize in Python for data science and machine learning, along with modern web technologies like 
+                        React and Node.js. I enjoy creating applications that leverage both traditional web development 
+                        and cutting-edge AI technologies to solve complex problems.
                     </p>
                     <div class="about-stats">
                         <div class="stat">
@@ -292,6 +290,15 @@
                     <div class="skill-bars">
                         <div class="skill-bar">
                             <div class="skill-info">
+                                <span class="skill-name">Python</span>
+                                <span class="skill-percentage">85%</span>
+                            </div>
+                            <div class="progress-bar">
+                                <div class="progress" data-width="85"></div>
+                            </div>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-info">
                                 <span class="skill-name">Node.js</span>
                                 <span class="skill-percentage">70%</span>
                             </div>
@@ -310,20 +317,56 @@
                         </div>
                         <div class="skill-bar">
                             <div class="skill-info">
-                                <span class="skill-name">MongoDB</span>
-                                <span class="skill-percentage">65%</span>
-                            </div>
-                            <div class="progress-bar">
-                                <div class="progress" data-width="65"></div>
-                            </div>
-                        </div>
-                        <div class="skill-bar">
-                            <div class="skill-info">
                                 <span class="skill-name">REST APIs</span>
                                 <span class="skill-percentage">80%</span>
                             </div>
                             <div class="progress-bar">
                                 <div class="progress" data-width="80"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <div class="category-header">
+                        <i class="fas fa-brain"></i>
+                        <h3>AI & Machine Learning</h3>
+                    </div>
+                    <div class="skill-bars">
+                        <div class="skill-bar">
+                            <div class="skill-info">
+                                <span class="skill-name">Machine Learning</span>
+                                <span class="skill-percentage">75%</span>
+                            </div>
+                            <div class="progress-bar">
+                                <div class="progress" data-width="75"></div>
+                            </div>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-info">
+                                <span class="skill-name">TensorFlow</span>
+                                <span class="skill-percentage">70%</span>
+                            </div>
+                            <div class="progress-bar">
+                                <div class="progress" data-width="70"></div>
+                            </div>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-info">
+                                <span class="skill-name">Pandas/NumPy</span>
+                                <span class="skill-percentage">80%</span>
+                            </div>
+                            <div class="progress-bar">
+                                <div class="progress" data-width="80"></div>
+                            </div>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-info">
+                                <span class="skill-name">Data Analysis</span>
+                                <span class="skill-percentage">85%</span>
+                            </div>
+                            <div class="progress-bar">
+                                <div class="progress" data-width="85"></div>
                             </div>
                         </div>
                     </div>
@@ -355,20 +398,20 @@
                         </div>
                         <div class="skill-bar">
                             <div class="skill-info">
+                                <span class="skill-name">Jupyter Notebook</span>
+                                <span class="skill-percentage">90%</span>
+                            </div>
+                            <div class="progress-bar">
+                                <div class="progress" data-width="90"></div>
+                            </div>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-info">
                                 <span class="skill-name">Vercel/Netlify</span>
                                 <span class="skill-percentage">80%</span>
                             </div>
                             <div class="progress-bar">
                                 <div class="progress" data-width="80"></div>
-                            </div>
-                        </div>
-                        <div class="skill-bar">
-                            <div class="skill-info">
-                                <span class="skill-name">Responsive Design</span>
-                                <span class="skill-percentage">85%</span>
-                            </div>
-                            <div class="progress-bar">
-                                <div class="progress" data-width="85"></div>
                             </div>
                         </div>
                     </div>
@@ -473,21 +516,45 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fas fa-brain"></i>
                     </div>
                     <div class="project-content">
-                        <h3>Todo List Application</h3>
-                        <p>A feature-rich todo application with local storage, task categories, due dates, and priority
-                            levels.
-                            Built with vanilla JavaScript focusing on clean code and user experience.</p>
+                        <h3>Machine Learning Classifier</h3>
+                        <p>A machine learning project that classifies data using various algorithms. Implemented with Python, 
+                            scikit-learn, and data visualization libraries for comprehensive analysis and predictions.</p>
                         <div class="project-tech">
-                            <span>JavaScript</span>
-                            <span>Local Storage</span>
-                            <span>CSS3</span>
-                            <span>HTML5</span>
+                            <span>Python</span>
+                            <span>Scikit-learn</span>
+                            <span>Pandas</span>
+                            <span>Matplotlib</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/SamarthBundele/todo-app" target="_blank" class="project-link">
+                            <a href="https://github.com/SamarthBundele/ml-classifier" target="_blank" class="project-link">
+                                <i class="fab fa-github"></i> Code
+                            </a>
+                            <a href="#" target="_blank" class="project-link">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <i class="fas fa-chart-bar"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>Data Visualization Dashboard</h3>
+                        <p>An interactive data visualization dashboard built with Python and Streamlit. Features real-time 
+                            data processing, multiple chart types, and statistical analysis for business insights.</p>
+                        <div class="project-tech">
+                            <span>Python</span>
+                            <span>Streamlit</span>
+                            <span>Plotly</span>
+                            <span>Pandas</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/SamarthBundele/data-dashboard" target="_blank" class="project-link">
                                 <i class="fab fa-github"></i> Code
                             </a>
                             <a href="#" target="_blank" class="project-link">
