--- a/index.html
+++ b/index.html
@@ -185,12 +185,14 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        I'm a dedicated full-stack developer with a passion for AI and machine learning. Currently pursuing my degree 
+                        I'm a dedicated full-stack developer with a passion for AI and machine learning. Currently
+                        pursuing my degree
                         while building real-world projects that combine web development with intelligent data solutions.
                     </p>
                     <p>
-                        I specialize in Python for data science and machine learning, along with modern web technologies like 
-                        React and Node.js. I enjoy creating applications that leverage both traditional web development 
+                        I specialize in Python for data science and machine learning, along with modern web technologies
+                        like
+                        React and Node.js. I enjoy creating applications that leverage both traditional web development
                         and cutting-edge AI technologies to solve complex problems.
                     </p>
                     <div class="about-stats">
@@ -520,8 +522,10 @@
                     </div>
                     <div class="project-content">
                         <h3>Machine Learning Classifier</h3>
-                        <p>A machine learning project that classifies data using various algorithms. Implemented with Python, 
-                            scikit-learn, and data visualization libraries for comprehensive analysis and predictions.</p>
+                        <p>A machine learning project that classifies data using various algorithms. Implemented with
+                            Python,
+                            scikit-learn, and data visualization libraries for comprehensive analysis and predictions.
+                        </p>
                         <div class="project-tech">
                             <span>Python</span>
                             <span>Scikit-learn</span>
@@ -529,7 +533,8 @@
                             <span>Matplotlib</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/SamarthBundele/ml-classifier" target="_blank" class="project-link">
+                            <a href="https://github.com/SamarthBundele/ml-classifier" target="_blank"
+                                class="project-link">
                                 <i class="fab fa-github"></i> Code
                             </a>
                             <a href="#" target="_blank" class="project-link">
@@ -545,7 +550,8 @@
                     </div>
                     <div class="project-content">
                         <h3>Data Visualization Dashboard</h3>
-                        <p>An interactive data visualization dashboard built with Python and Streamlit. Features real-time 
+                        <p>An interactive data visualization dashboard built with Python and Streamlit. Features
+                            real-time
                             data processing, multiple chart types, and statistical analysis for business insights.</p>
                         <div class="project-tech">
                             <span>Python</span>
@@ -554,7 +560,8 @@
                             <span>Pandas</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/SamarthBundele/data-dashboard" target="_blank" class="project-link">
+                            <a href="https://github.com/SamarthBundele/data-dashboard" target="_blank"
+                                class="project-link">
                                 <i class="fab fa-github"></i> Code
                             </a>
                             <a href="#" target="_blank" class="project-link">
@@ -564,11 +571,11 @@
                     </div>
                 </div>
             </div>
-            <div class="projects-cta">
-                <a href="https://github.com/SamarthBundele" target="_blank" class="btn btn-primary">
-                    View All Projects on GitHub
-                </a>
-            </div>
+            <div class="projects-cta"></div>
+            <a href="https://github.com/SamarthBundele" target="_blank" class="btn btn-primary">
+                View All Projects on GitHub
+            </a>
+        </div>
         </div>
     </section>
 
