--- a/index.html
+++ b/index.html
@@ -96,6 +96,36 @@
                     </a>
                 </div>
 
+                <div class="social-media-section">
+                    <h4>Connect with me</h4>
+                    <div class="social-links-grid">
+                        <a href="https://linkedin.com/in/samarthbundele" target="_blank" class="social-link linkedin">
+                            <i class="fab fa-linkedin-in"></i>
+                            <span>LinkedIn</span>
+                        </a>
+                        <a href="https://leetcode.com/samarthbundele" target="_blank" class="social-link leetcode">
+                            <i class="fas fa-code"></i>
+                            <span>LeetCode</span>
+                        </a>
+                        <a href="https://instagram.com/samarthbundele" target="_blank" class="social-link instagram">
+                            <i class="fab fa-instagram"></i>
+                            <span>Instagram</span>
+                        </a>
+                        <a href="https://twitter.com/samarthbundele" target="_blank" class="social-link twitter">
+                            <i class="fab fa-twitter"></i>
+                            <span>Twitter</span>
+                        </a>
+                        <a href="https://medium.com/@samarthbundele" target="_blank" class="social-link medium">
+                            <i class="fab fa-medium"></i>
+                            <span>Medium</span>
+                        </a>
+                        <a href="mailto:samarthbundele@gmail.com" class="social-link email">
+                            <i class="fas fa-envelope"></i>
+                            <span>Email</span>
+                        </a>
+                    </div>
+                </div>
+
                 <div class="stats-grid">
                     <div class="stat-item">
                         <div class="stat-number" data-target="25">0</div>
@@ -113,6 +143,32 @@
             </div>
 
             <div class="hero-code">
+                <div class="profile-section">
+                    <div class="profile-card">
+                        <div class="profile-image">
+                            <img src="assets/profile-photo.jpg" alt="Samarth Bundele" class="profile-img">
+                        </div>
+                        <div class="profile-info">
+                            <h3>Samarth Bundele</h3>
+                            <p>Full Stack Developer & AI Enthusiast</p>
+                            <div class="profile-social-links">
+                                <a href="https://linkedin.com/in/samarthbundele" target="_blank" class="social-btn linkedin">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                                <a href="https://github.com/SamarthBundele" target="_blank" class="social-btn github">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="https://leetcode.com/samarthbundele" target="_blank" class="social-btn leetcode">
+                                    <i class="fas fa-code"></i>
+                                </a>
+                                <a href="https://instagram.com/samarthbundele" target="_blank" class="social-btn instagram">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="code-editor">
                     <div class="editor-header">
                         <div class="editor-tabs">
@@ -590,11 +646,11 @@
                     <div class="contact-items">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>samarthbundele@gmail.com</span>
+                            <span>samarthbundele75@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <span>Available on request</span>
+                            <span>+91 8976386871</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
@@ -625,8 +681,8 @@
                 <p>&copy; 2024 Samarth Bundele. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="https://github.com/SamarthBundele" target="_blank">GitHub</a>
-                    <a href="https://linkedin.com/in/samarthbundele" target="_blank">LinkedIn</a>
-                    <a href="mailto:samarthbundele@gmail.com">Email</a>
+                    <a href="https://www.linkedin.com/in/samarth-bundele-51a1a622a/" target="_blank">LinkedIn</a>
+                    <a href="mailto:samarthbundele75@gmail.com">Email</a>
                 </div>
             </div>
         </div>
