--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
                 <div class="social-media-section">
                     <h4>Connect with me</h4>
                     <div class="social-links-grid">
-                        <a href="https://linkedin.com/in/samarthbundele" target="_blank" class="social-link linkedin">
+                        <a href="https://www.linkedin.com/in/samarth-bundele-51a1a622a/" target="_blank" class="social-link linkedin">
                             <i class="fab fa-linkedin-in"></i>
                             <span>LinkedIn</span>
                         </a>
-                        <a href="https://leetcode.com/samarthbundele" target="_blank" class="social-link leetcode">
+                        <a href="https://leetcode.com/u/samarthbundele75/" target="_blank" class="social-link leetcode">
                             <i class="fas fa-code"></i>
                             <span>LeetCode</span>
                         </a>
-                        <a href="https://instagram.com/samarthbundele" target="_blank" class="social-link instagram">
+                        <a href="https://www.instagram.com/millennial.guy/" target="_blank" class="social-link instagram">
                             <i class="fab fa-instagram"></i>
                             <span>Instagram</span>
                         </a>
-                        <a href="https://twitter.com/samarthbundele" target="_blank" class="social-link twitter">
+                        <a href="https://x.com/bundele_samarth" target="_blank" class="social-link twitter">
                             <i class="fab fa-twitter"></i>
                             <span>Twitter</span>
                         </a>
@@ -119,7 +119,7 @@
                             <i class="fab fa-medium"></i>
                             <span>Medium</span>
                         </a>
-                        <a href="mailto:samarthbundele@gmail.com" class="social-link email">
+                        <a href="mailto:samarthbundele75@gmail.com" class="social-link email">
                             <i class="fas fa-envelope"></i>
                             <span>Email</span>
                         </a>
@@ -146,7 +146,7 @@
                 <div class="profile-section">
                     <div class="profile-card">
                         <div class="profile-image">
-                            <img src="assets/profile-photo.jpg" alt="Samarth Bundele" class="profile-img">
+                            <img src="assets/profile.jpeg" alt="Samarth Bundele" class="profile-img">
                         </div>
                         <div class="profile-info">
                             <h3>Samarth Bundele</h3>
