--- a/index.html
+++ b/index.html
@@ -96,34 +96,23 @@
                     </a>
                 </div>
 
-                <div class="social-media-section">
-                    <h4>Connect with me</h4>
-                    <div class="social-links-grid">
-                        <a href="https://www.linkedin.com/in/samarth-bundele-51a1a622a/" target="_blank" class="social-link linkedin">
-                            <i class="fab fa-linkedin-in"></i>
-                            <span>LinkedIn</span>
-                        </a>
-                        <a href="https://leetcode.com/u/samarthbundele75/" target="_blank" class="social-link leetcode">
-                            <i class="fas fa-code"></i>
-                            <span>LeetCode</span>
-                        </a>
-                        <a href="https://www.instagram.com/millennial.guy/" target="_blank" class="social-link instagram">
-                            <i class="fab fa-instagram"></i>
-                            <span>Instagram</span>
-                        </a>
-                        <a href="https://x.com/bundele_samarth" target="_blank" class="social-link twitter">
-                            <i class="fab fa-twitter"></i>
-                            <span>Twitter</span>
-                        </a>
-                        <a href="https://medium.com/@samarthbundele" target="_blank" class="social-link medium">
-                            <i class="fab fa-medium"></i>
-                            <span>Medium</span>
-                        </a>
-                        <a href="mailto:samarthbundele75@gmail.com" class="social-link email">
-                            <i class="fas fa-envelope"></i>
-                            <span>Email</span>
-                        </a>
-                    </div>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/samarth-bundele-51a1a622a/" target="_blank"
+                        class="social-link">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://leetcode.com/u/samarthbundele75/" target="_blank" class="social-link">
+                        <i class="fas fa-code"></i>
+                    </a>
+                    <a href="https://www.instagram.com/millennial.guy/" target="_blank" class="social-link">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://x.com/bundele_samarth" target="_blank" class="social-link">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="mailto:samarthbundele75@gmail.com" class="social-link">
+                        <i class="fas fa-envelope"></i>
+                    </a>
                 </div>
 
                 <div class="stats-grid">
@@ -152,23 +141,26 @@
                             <h3>Samarth Bundele</h3>
                             <p>Full Stack Developer & AI Enthusiast</p>
                             <div class="profile-social-links">
-                                <a href="https://linkedin.com/in/samarthbundele" target="_blank" class="social-btn linkedin">
-                                    <i class="fab fa-linkedin-in"></i>
+                                <a href="https://www.linkedin.com/in/samarth-bundele-51a1a622a/" target="_blank"
+                                    class="social-btn linkedin"></a>
+                                <i class="fab fa-linkedin-in"></i>
                                 </a>
                                 <a href="https://github.com/SamarthBundele" target="_blank" class="social-btn github">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://leetcode.com/samarthbundele" target="_blank" class="social-btn leetcode">
+                                <a href="https://leetcode.com/u/samarthbundele75/" target="_blank"
+                                    class="social-btn leetcode">
                                     <i class="fas fa-code"></i>
                                 </a>
-                                <a href="https://instagram.com/samarthbundele" target="_blank" class="social-btn instagram">
-                                    <i class="fab fa-instagram"></i>
+                                <a href="https://www.instagram.com/millennial.guy/" target="_blank"
+                                    class="social-btn instagram"></a>
+                                <i class="fab fa-instagram"></i>
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="code-editor">
                     <div class="editor-header">
                         <div class="editor-tabs">
